# chatbot

./: .devcontainer.json  Dockerfile  Makefile  README.md  client.py  pyproject.toml
chatbot/: app.py
tests/: conftest.py  test_app.py
