[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Deepali Kumar <d@acnt.me>"]

[tool.poetry.dependencies]
python = "^3.7"
bocadillo = "^0.18.2"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
ipython = "^7.7"
pylint = "^2.3"
flake8 = "^3.7"
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
